<resources>
    <string name="app_name">排队机叫号客户端</string>

    <string name="dialog_title">提示</string>
    <string name="dialog_commit">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="qrcode_text">将二维码/条码放入框内，即可自动扫描</string>
    <string name="dialog_message">您确定与IP地址是【%s】终端通信吗?</string>
    <string name="dialog_do_not">不开通</string>
    <string name="dialog_confirm">确认</string>
    <string name="res_is_empty">展示端还没有任何显示内容，请添加新的资源</string>
    <string name="res_no_permission">请设置允许开通【存储】权限,否则软件无法运行</string>

    <string name="dialog_device_id">读取设备指纹</string>
    <string name="dialog_code_isnull">验证码不能为空</string>
    <string name="dialog_jump">马上跳转页面 … </string>
    <string name="dialog_input_again">重新读取文件</string>
    <string name="code_file_is_error">验证码错误</string>
    <string name="deviceid_is_error">设备指纹获取有误</string>
    <string name="dialog_setting">设置</string>
    <string name="dialog_show_button">显示测试按钮</string>
    <string name="dialog_yes">确定</string>
    <string name="dialog_code_path">请将验证码文件code.txt放到【根目录/Android/data/com.szty.h5xinfa/files】下面</string>
    <string name="exit_app">退出应用</string>


    <string name="config_file_not_exist">配置文件不存在</string>
    <string name="read_config_file_error">读取配置文件出错</string>
    <string name="unzip_error">解压文件出错</string>
    <string name="create_file_error">创建目录失败</string>
    <string name="update_finish">更新完成</string>
    <string name="update_error">更新失败</string>
    <string name="download_zip_error">下载压缩包失败</string>
    <string name="download_apk_error">下载安装包失败</string>
    <string name="zip_file_is_not_exists">压缩文件不存在</string>
    <string name="install_error">安装失败</string>
    <string name="press_again_exit">再按一次退出程序</string>

    <string name="server_ip">服务器IP</string>
    <string name="server_port">服务器端口号</string>
    <string name="window_number">屛地址</string>
    <string name="text_size">字体大小</string>
    <string name="btn_save">保存</string>
    <string name="reset_default">回复默认值</string>
    <string name="dialog_exit">确定退出应用吗？</string>
    <string name="text_color">字体颜色(格式：255,255,255) 取值0~255</string>
    <string name="first_color">第一行背景颜色(格式：255,255,255)</string>
    <string name="second_color">第二行背景颜色</string>
    <string name="third_color">第三行背景颜色</string>
    <string name="forth_color">第四行背景颜色</string>

    <string name="url_update">update_judge.aspx?id={0}&#038;ip={1}</string>
    <string name="url_upgrade">upgrade_judge.aspx?id={0}&#038;ip={1}</string>
    <string name="url_update_end">update_finish.aspx?finishId={0}</string>
    <string name="url_upgrade_end">upgrade_finish.aspx?finishId={0}</string>
    <string name="url_heart">heart_beat.aspx?id={0}&#038;ip={1}</string>

    <string name="get_device_id">获取设备指纹</string>
    <string name="pre_str">sztiye_</string>
</resources>
